-
Type:
Bug
-
Status: Closed
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 0.9.1
-
Fix Version/s: 0.10.0
-
Component/s: C++ - Library, Java - Library
-
Labels:None
If the base64 encoded JSON string has padding bytes at the end, the resulting binary data returned in the thrift object ends up with extra padding bytes (0xFF) at the end.
It seems like this is caused by the TJSONProtocol using the padded length when it tries to decode the last chunk, which results in the '=' being converted into binary data. The DECODE_TABLE defaults to -1 (0xFF), which is how it gets into the final output.
- Is contained by
-
THRIFT-3359 Binary field incompatibilities
-
- Closed
-
- is related to
-
THRIFT-3359 Binary field incompatibilities
-
- Closed
-