THRIFT-3276 Binary data does not decode correctly using the TJSONProtocol when the base64 encoded data is padded.

This closes #645